# DotDocs

./: .env.example  .gitignore  PRD  README.md  main.py  pyproject.toml
app/: cli.py
app/api/: dependencies.py
app/api/v1/: ingest.py  search.py
app/app/: user.py
app/config/: database.py  settings.py
app/core/: agents.py  chunking.py  embeddings.py  ingest.py  scraper.py  search.py  vectorstore.py
app/database/: models.py
app/repositories/: user.py
src/ddocs/: __init__.py
tests/: test_chunking.py  test_ingest_ids.py  test_search_semantic.py
web/: .cta.json  package.json  pnpm-lock.yaml
web/.github/instructions/: tanstack-react-router_setup-and-architecture.instructions.md
